header: fix align buttons

--- a/src/theme-pagarme/header/index.css
+++ b/src/theme-pagarme/header/index.css
@@ -5,6 +5,7 @@
 .back {
   font-size: var(--header-button-font-size);
   padding: 0;
+  margin-top: 22px;
 }
 
 .logo {
